samples/_failures_safe/1761297176_a61bea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a20b7ac3.c:188:1: error: expected identifier or ‘(’ at end of input
  188 | void
      | ^~~~
